--- a/Exercício 3 - Projeto Integrador.Rmd
+++ b/Exercício 3 - Projeto Integrador.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Exercício 3 - Projeto Integrador"
+title: "Exercicio 3"
 author: "Larissa Fernandes"
-date: "15 de abril de 2018"
+date: "16 de abril de 2018"
 output: html_document
 ---
 
